src/shared/ui/components/card/index.scss
@use "sass/size";
@use "sass/color";

.Card {
    display: flex;
    flex-flow: column nowrap;
    position: relative;
    padding: calc(size.$gap / 6);
    background-color: rgba(color.$lightest, 0.25);
    border-radius: size.$task-radius;
    font-size: size.$small-text;
    overflow: scroll;

    .title {
        padding: 0.5 * size.$gap size.$gap;
        font-size: size.$large-text;

        span {
            float: right;
        }
    }

    @for $i from 0 to 3 {
        .MuiSvgIcon-root:nth-of-type(#{$i + 1}) {
            position: absolute;
            font-size: size.$large-text;
            top: calc(0.5 * size.$gap + size.$gap / 6);
            right: calc(0.5 * size.$gap + $i * (size.$large-text + 0.25 * size.$gap) + size.$gap / 6);
            cursor: pointer;
        }
    }

    ul {
        display: flex;
        flex-flow: column nowrap;

        li {
            margin-right: 0.5 * size.$gap;

            span {
                position: relative;
                display: block;
                width: 100%;

                a {
                    color: darken(color.$blue, 20%) !important;
                }

                .MuiSvgIcon-root {
                    visibility: hidden;
                    position: absolute;
                    font-size: size.$large-text;
                    top: auto !important;
                    bottom: auto !important;
                    right: 0 !important;
                    cursor: pointer;
                }
            }

            &:hover {
                background-color: color.$lightest;

                span > .MuiSvgIcon-root {
                    visibility: visible;
                }
            }
        }
    }
}

